<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ge.research.sadl.darpa.aske.dialog</groupId>
  <artifactId>com.ge.research.sadl.darpa.aske.dialog.parent</artifactId>
  <version>1.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>DARPA-ASKE</name>

  <modules>
    <module>com.ge.research.sadl.darpa.aske.dialog</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.dependencies</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.feature</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ide</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.tests</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ui</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ui.tests</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.update</module>
  </modules>

  <properties>
    <dialogOsgiVersion>1.1.0</dialogOsgiVersion>
    <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <mwe2Version>2.12.0</mwe2Version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sadlOsgiVersion>3.5.0</sadlOsgiVersion>
    <sadlVersion>${sadlOsgiVersion}-SNAPSHOT</sadlVersion>
    <!-- 
		<tycho-version>1.5.1</tycho-version>
		<xtextVersion>2.23.0</xtextVersion>
		<mwe2Version>2.11.3</mwe2Version>
		 -->
    <tycho-version>2.3.0</tycho-version>
    <xtextVersion>2.24.0</xtextVersion>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.eclipse.xtext</groupId>
        <artifactId>xtext-dev-bom</artifactId>
        <version>${xtextVersion}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies></dependencies>
  <build>
    <finalName>${project.groupId}-${dialogOsgiVersion}.${maven.build.timestamp}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <filesets>
              <fileset>
                <directory>${basedir}/xtend-gen</directory>
                <includes>
                  <include>**/*</include>
                </includes>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <versionRange>[2.4.3,)</versionRange>
                    <goals>
                      <goal>resources</goal>
                      <goal>testResources</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <versionRange>[1.9.1,)</versionRange>
                    <goals>
                      <goal>add-resource</goal>
                      <goal>add-source</goal>
                      <goal>add-test-resource</goal>
                      <goal>add-test-source</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <versionRange>[0.23.1,)</versionRange>
                    <goals>
                      <goal>compile</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-packaging-plugin</artifactId>
                    <versionRange>[0.23.1,)</versionRange>
                    <goals>
                      <goal>build-qualifier</goal>
                      <goal>build-qualifier-aggregator</goal>
                      <goal>validate-id</goal>
                      <goal>validate-version</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <!-- 
						Can be removed after first generator execution
						https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097
					-->
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <compilerArgument>-err:-forbidden</compilerArgument>
            <useProjectSettings>false</useProjectSettings>
          </configuration>
        </plugin>
        <!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip
					To skip tests, but still compile them, use: -DskipTests
					To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail
					at end) -->
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
            <argLine>${tycho.testArgLine} ${platformSystemProperties} ${systemProperties} ${moduleProperties}</argLine>
            <failIfNoTests>false</failIfNoTests>
            <useUIHarness>false</useUIHarness>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.xtend</groupId>
          <artifactId>xtend-maven-plugin</artifactId>
          <version>${xtextVersion}</version>
          <configuration>
            <outputDirectory>${basedir}/xtend-gen</outputDirectory>
            <testOutputDirectory>${basedir}/xtend-gen</testOutputDirectory>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>compile</goal>
                <goal>xtend-install-debug-info</goal>
                <goal>testCompile</goal>
                <goal>xtend-test-install-debug-info</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Keep our poms looking tidy -->
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <createBackupFile>false</createBackupFile>
          <indentSchemaLocation>true</indentSchemaLocation>
          <lineSeparator>\n</lineSeparator>
          <predefinedSortOrder>custom_1</predefinedSortOrder>
          <sortDependencies>scope,groupId,artifactId</sortDependencies>
          <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
          <sortModules>true</sortModules>
          <sortPlugins>groupId,artifactId</sortPlugins>
          <sortProperties>true</sortProperties>
        </configuration>
        <executions>
          <execution>
            <id>default-sort</id>
            <goals>
              <goal>sort</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <target>
            <artifact>
              <groupId>com.ge.research.sadl</groupId>
              <artifactId>com.ge.research.sadl.target</artifactId>
              <version>${sadlVersion}</version>
            </artifact>
          </target>
          <environments>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>codehaus-snapshots</id>
      <name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
      <url>http://nexus.codehaus.org/snapshots/</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>codehaus-snapshots</id>
      <name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
      <url>http://nexus.codehaus.org/snapshots/</url>
    </pluginRepository>
  </pluginRepositories>

  <profiles>
    <profile>
      <id>macos</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
        <platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
      </properties>
    </profile>
    <profile>
      <id>jdk9-or-newer</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
      </properties>
    </profile>
  </profiles>
</project>
